# gus_gui

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
enc_temp_folder/2873422da85b2ec4ff5a3b8c4a552aa6/: window.cpp
setup/: setup.iss
src/: main.cpp
src/assets/: assets.qrc  resource.rc
src/assets/style/dark/: dark.sass  dark.scss  variables.sass  variables.scss
src/components/: addDialog.h  addItem.h  userItem.h
src/datastore/: db.h  user.h
src/utils/: utils.h
src/view/: window.cpp  window.h  window.ui
